--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/koa__router": "^12.0.3",
     "@types/node": "^18.15.3",
     "@types/ws": "^8.5.8",
+    "markdown-toc": "^1.2.0",
     "typescript": "^5.0.2"
   }
 }
